# Enterprise-HR-Database

./: README.md
backend/: CMakeLists.txt  build.sh
backend/src/: application.cpp  application.h  connection_pool.h  db.cpp  db.h  http_server.cpp  http_server.h  main.cpp  request_handler.h  resp_maker.h  sdk.h  serialization.cpp  serialization.h
backend/src/api/: api_handler.cpp  api_handler.h
backend/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
backend/src/body_types/: body_types.cpp  body_types.h
backend/src/domain/: business_trip.h  business_trip_fwd.h  composition_business_trip.h  composition_business_trip_fwd.h  department.h  department_fwd.h  employee.h  employee_fwd.h  job_title.h  job_title_fwd.h  order.h  order_fwd.h  staffing_table.h  staffing_table_fwd.h  time_sheet.h  time_sheet_fwd.h  trip.h  vacation.h  vacation_fwd.h  worker.h
backend/src/http_server/: http_server.cpp  http_server.h
backend/src/postgres/: postgres.cpp  postgres.h
backend/src/ui/: view.h
